<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Saadat</string>
    <string name="search_button">ПОИСК</string>
    <string name="back_button">Назад</string>
    <string name="choose_city">Выбрать город</string>
    <string name="choose_cat">Выбрать категорию</string>
    <string name="menu_button">Меню</string><string name="Loading_logo">Саадат\nМусульманский гид</string>
    <string name="miradio">Сейчас в эфире:\n______________________</string>
    <string name="info">Саадат - приложение информационно-справочного характера.\nТелефон: +7(916)026-92-91</string>
    <string name="btn_news">Новости</string>
    <string name="btn_namaz">Намаз</string>
    <string name="btn_afisha">События</string>
    <string name="btn_radio">Радио</string>
    <string name="btn_info">Инфо</string>
    <string name="btn_catalog">Места</string>
    <string name="pref_city_title">Выберите город</string>
    <string name="pref_notify_city">Город успешно изменен на</string>
    <string name="ab_sync">Синхронизация</string>
    <string name="rss_dialog_message">Обновление новостей...</string>
    <string name="rss_dialog_title">Загрузка</string>
    <string name="ab_title"/>
    <string name="ab_info_title">Обратная связь</string>
    <string name="ab_news_title">Новости</string>
    <string name="ab_namas_title">Намаз</string>
    <string name="ab_locations_title">Места</string>
    <string name="ab_settings_title">Настройки</string>
    <string name="ab_radio_title">Радио</string>
    <string name="ab_events_title">События</string>
    <string name="ab_map_item">Карта</string>
    <string name="org_not_found">Точных данных нет</string>
    <string name="ten_minutes_offset">10 минут</string>
    <string name="five_minutes_offset">5 минут</string>
    <string name="one_minutes_offset">1 минуту</string>
    <string name="in_time_offset">0 минут</string>
    <string name="offset_title">Оповещать за</string>
    <string name="pref_notify_offset">Оповещать за</string>
    <string name="pref_country_title">Выберите страну</string>
    <string name="pref_notify_country">Страна изменена на</string>
    <string name="listTab">Список</string>
    <string name="mapTab">На карте</string><string name="org_name">Название организации</string><string name="org_category">Категория</string><string name="org_address">Полный адрес</string><string name="org_tnumber">Телефон</string><string name="org_site">Сайт</string><string name="org_additional">Дополнительная информация</string><string name="event_title">Название мероприятия</string><string name="event_text">Описание события</string><string name="event_time">Дата и время события</string><string name="event_city">Город события</string>

</resources>
